tests/paczka1/small_fuzzy/18515864.err
Error in line 1: m5DVJWAM S718 28,2
Error in line 2: m5DVJWAM A564 21,4
Error in line 11: 0ESYbmfU S263 55,4
Error in line 16: 0ESYbmfU A564 21,62
